--- a/src/routes/Produtos.scss
+++ b/src/routes/Produtos.scss
@@ -1,38 +1,16 @@
-$alinhaMentoAoCentro:0 auto; 
-$textColor:#fff;
-$backColor:#000000;
-$displayPadrao:block;
+.Produtos{
 
-@mixin estiloParaBtn($borda,$backGround,$colorText){
-    border: $borda;
-    background-color: $backGround;
-    color: $colorText;
-    margin: 0 auto 5% auto;
-    display: $displayPadrao;
-    width: 30%;
-    height: 50px;
-    border-radius: 5px;
-    font-size: 1.5rem;
-    transition: background-color 300ms;
 
-    &:hover{
-        background-color:#aba9b1 ;
-    }
-
-    &:active{
-        background-color:#202022 ;
-    }
-
-}
-
-@mixin estilo($borda,$backGround,$colorText){
-    buttom{
-        border: $borda;
-        background-color: $backGround;
-        color: $colorText;
-    }
-}
-
-div button{
-   @include estiloParaBtn(2px solid #ccc, #3f3e42, $textColor);
+    button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 5px 10px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+     }
 }
