--- a/src/components/Cabecalho/Cabecalho.scss
+++ b/src/components/Cabecalho/Cabecalho.scss
@@ -1,34 +1,43 @@
 
-.cabecalho{
-    
-    background-color: #999;
-    font-size: 1.5rem;
-    font-weight: bold;
-    width: 50%;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    
-    ul{
-        list-style: none;
-        
-        li a{
 
-            text-decoration: none;
-            color: #fff;
-            display: block;
-            padding: 8px 16px;
-            transition: background-color ease-out 300ms;
-
-                &:hover{
-                    background-color: #111;
-                }
-            
-
+.cabecalho {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+  
+    ul {
+      list-style: none;
+      padding: 0;
+    }
+  
+    li {
+      display: inline;
+      margin-right: 20px;
+  
+      .active {
+        font-weight: bold;
+      }
+  
+      a {
+        color: #fff;
+        text-decoration: none;
+        font-size: 18px;
+  
+ 
+  
+  
+        &:hover {
+          background-color: #111 ;
+          border-radius: 10px;
         }
-
+      }
+    
+  
+    .active {
+      background-color: red !important;
+      border-radius: 10px;
     }
-
-    .active{
-        background-color: red !important;
-    }
-
+  }
 }
+  
