--- a/src/routes/Produtos.scss
+++ b/src/routes/Produtos.scss
@@ -1,16 +1,50 @@
-.Produtos{
-
-
+.Produtos {
+    width: 100%;
+    margin: 0 auto;
+    padding: 20px;
+    box-sizing: border-box;
+   
+    h1 {
+       text-align: center;
+       margin-bottom: 20px;
+    }
+   
+    table {
+       width: 100%;
+       border-collapse: collapse;
+   
+       th, td {
+         padding: 10px;
+         text-align: center;
+         border: 1px solid #ccc;
+       }
+   
+       th {
+         background-color: #f2f2f2;
+         font-weight: bold;
+       }
+   
+       tbody tr:nth-child(even) {
+         background-color: #f2f2f2;
+       }
+   
+       tfoot {
+         font-weight: bold;
+         background-color: #f2f2f2;
+       }
+    }
+   
     button {
-        background-color: #4CAF50;
-        border: none;
-        color: white;
-        padding: 5px 10px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;
-     }
-}
+       background-color: #4CAF50;
+       border: none;
+       color: white;
+       padding: 5px 10px;
+       text-align: center;
+       text-decoration: none;
+       display: inline-block;
+       font-size: 16px;
+       margin: 4px 2px;
+       cursor: pointer;
+    }
+   }
+   
