--- a/src/components/Cabecalho/Cabecalho.scss
+++ b/src/components/Cabecalho/Cabecalho.scss
@@ -24,9 +24,6 @@
         text-decoration: none;
         font-size: 18px;
   
- 
-  
-  
         &:hover {
           background-color: #111 ;
           border-radius: 10px;
@@ -35,7 +32,7 @@
     
   
     .active {
-      background-color: red !important;
+      background-color: #4CAF50 !important;
       border-radius: 10px;
     }
   }
