--- a/src/components/Cabecalho/Cabecalho.scss
+++ b/src/components/Cabecalho/Cabecalho.scss
@@ -1,6 +1,4 @@
-
-
-.cabecalho {
+.Cabecalho {
     background-color: #333;
     color: #fff;
     padding: 20px;
@@ -8,6 +6,7 @@
   
     ul {
       list-style: none;
+      margin: 0;
       padding: 0;
     }
   
@@ -15,24 +14,22 @@
       display: inline;
       margin-right: 20px;
   
-      .active {
-        font-weight: bold;
-      }
-  
       a {
         color: #fff;
         text-decoration: none;
         font-size: 18px;
   
         &:hover {
-          background-color: #111 ;
           border-radius: 10px;
+          background-color: #ddd;
+          color: #000;
         }
       }
     
   
     .active {
       background-color: #4CAF50 !important;
+      color: #fff;
       border-radius: 10px;
     }
   }
